--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,9 @@
     "version": "1.0.0",
     "manifest_version": 2,
     "description": "Filter summons list",
+    "browser_action": {
+        "default_popup": "popup.html"
+    },
     "content_scripts": [
         {
             "matches": [
