--- a/chrome-extension/config.json.example
+++ b/chrome-extension/config.json.example
@@ -3,13 +3,48 @@
         {
             "hash": "#quest/supporter/300051/1/0/18",
             "summon_name": "シヴァ",
-            "bless_rank": "1"
+            "bless_rank": 3
         },
         {
             "hash": "#quest/supporter/300101/1/0/19",
             "summon_name": "エウロペ",
-            "bless_rank": "1",
+            "bless_rank": 3,
             "attribute": 2
+        },
+        {
+            "hash": "#quest/supporter/300161/1/0/20",
+            "summon_name": "ゴッドガード・ブローディア",
+            "bless_rank": 3
+        },
+        {
+            "hash": "#quest/supporter/300261/1/0/21",
+            "summon_name": "グリームニル",
+            "bless_rank": 3
+        },
+        {
+            "hash": "#quest/supporter/773931/1/0/10374",
+            "summon_name": "ルシフェル",
+            "bless_rank": 5
+        },
+        {
+            "hash": "#quest/supporter/773901/1",
+            "summon_name": "ルシフェル",
+            "bless_rank": 5
+        },
+        {
+            "hash": "#quest/supporter/500151/5",
+            "summon_name": "エウロペ",
+            "bless_rank": 3
+        },
+        {
+            "hash": "#quest/supporter/300271/1/0/26",
+            "summon_name": "セレスト・マグナ",
+            "bless_rank": 5
+        },
+        {
+            "hash": "#quest/supporter/300281/1/0/31",
+            "summon_name": "ルシフェル",
+            "bless_rank": 5
         }
     ]
 }
